--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -18,7 +18,7 @@ custom_proxy_group=📺 PX`select`[]🚀 手动选择`[]🇯🇵 JP_Nodes
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
 custom_proxy_group=🇸🇬 SG_Nodes`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 All_Nodes`load-balance`!!GROUPID=!0`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 All_Nodes`load-balance`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 Direct`select`[]DIRECT
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
