--- a/config/Rule_Surfboard.ini
+++ b/config/Rule_Surfboard.ini
@@ -11,11 +11,11 @@ ruleset=🐟 Final,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]♻️ All_Nodes
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 SG_Nodes
-custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 SG_Nodes
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 JP_Nodes
-custom_proxy_group=📺 PX`select`[]🚀 手动选择`[]🇯🇵 JP_Nodes
-custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
+custom_proxy_group=💻 Netflix`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
+custom_proxy_group=💻 Disney+`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
+custom_proxy_group=📹 TikTok`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
+custom_proxy_group=📺 PX`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
+custom_proxy_group=📺 Bahamut`select`!!GROUPID=!0!!(台|TW|Taiwan)`[]🚀 手动选择
 custom_proxy_group=🇸🇬 SG_Nodes`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP_Nodes`url-test`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ All_Nodes`url-test`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)`http://www.gstatic.com/generate_204`300,,50
