--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -9,7 +9,7 @@ ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Final,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]🔮 All_Nodes|Load-Balance`[]🌍 All_Nodes
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]🌍 All_Nodes
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
 custom_proxy_group=💻 Disney+`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
@@ -18,10 +18,9 @@ custom_proxy_group=📺 PX`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
 custom_proxy_group=📺 Bahamut`select`!!GROUPID=!0!!(台|TW|Taiwan)`[]🚀 手动选择
 custom_proxy_group=🇸🇬 SG_Nodes`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 All_Nodes|Load-Balance`load-balance`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 All_Nodes`load-balance`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 Direct`select`[]DIRECT
-custom_proxy_group=🐟 Final`select`[]🚀 手动选择
+custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 All_Nodes
+custom_proxy_group=🌍 All_Nodes`load-balance`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)`http://www.gstatic.com/generate_204`300,,50
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;^((?!港|HK|Hong Kong).)*$
 ;^(?!.*AGA).*(HK|香港)
