--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -22,6 +22,7 @@ custom_proxy_group=🎯 Direct`select`[]DIRECT
 custom_proxy_group=💻 Netflix`select`!!INSERT=1
 
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 All_Nodes
+custom_proxy_group=🌍 All_Nodes
 custom_proxy_group=🌍 All_Nodes`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;^((?!港|HK|Hong Kong).)*$
