--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -21,7 +21,7 @@ custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|
 custom_proxy_group=🎯 Direct`select`[]DIRECT
 custom_proxy_group=💻 Netflix`select`!!GROUPID=0`!!INSERT=0
 
-custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 All_Nodes
+custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]All_Nodes
 custom_proxy_group=All_Nodes`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
