--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -16,13 +16,15 @@ custom_proxy_group=💻 Disney+`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
 custom_proxy_group=📹 TikTok`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
 custom_proxy_group=📺 PX`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
 custom_proxy_group=📺 Bahamut`select`!!GROUPID=!0!!(台|TW|Taiwan)`[]🚀 手动选择
-custom_proxy_group=🇸🇬 SG_Nodes`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 Direct`select`[]DIRECT
+;custom_proxy_group=🇸🇬 SG_Nodes`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=💻 Netflix`select`!!GROUPID=0`!!INSERT=0
 
+custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎯 Direct`select`[]DIRECT
+
+custom_proxy_group=All_Nodes`!!GROUPID=0
+
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]All_Nodes
-custom_proxy_group=All_Nodes`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;^((?!港|HK|Hong Kong).)*$
