--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -22,7 +22,7 @@ custom_proxy_group=💻 Netflix`select`!!GROUPID=0`!!INSERT=0
 custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 Direct`select`[]DIRECT
 
-custom_proxy_group=All_Nodes`!!GROUPID=0
+custom_proxy_group=All_Nodes`select`!!GROUPID=0
 
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]All_Nodes
 
