--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -11,12 +11,12 @@ ruleset=🐟 Final,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择`[]All_Nodes
-custom_proxy_group=💻 Netflix`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
+;custom_proxy_group=💻 Netflix`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
 custom_proxy_group=💻 Disney+`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
 custom_proxy_group=📹 TikTok`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
 custom_proxy_group=📺 PX`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
 custom_proxy_group=📺 Bahamut`select`!!GROUPID=!0!!(台|TW|Taiwan)`[]🚀 手动选择
-;custom_proxy_group=🇸🇬 SG_Nodes`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 SG_Nodes`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=💻 Netflix`select`!!GROUPID=0`!!INSERT=0
 
 custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
