--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -21,7 +21,7 @@ custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|
 custom_proxy_group=🎯 Direct`select`[]DIRECT
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 AllNodes
 ；custom_proxy_group=🌍 AllNodes`select`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
-custom_proxy_group=🌍 AllNodes`select`!!GROUPID=!0`!!INSERT=0-1!!(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=🌍 AllNodes`select`!!GROUPID=!0`!!INSERT=0-1
 
 
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
