--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -8,13 +8,14 @@ ruleset=🐟 Final,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]🌍 AllNodes
 custom_proxy_group=🌍 Global`select`[]🚀 手动选择
-custom_proxy_group=💻 NetFlix|Disney`select`[]🇸🇬 SG`[]🚀 手动选择
-custom_proxy_group=📹 TikTok|PX`select`[]🇯🇵 JP`[]🚀 手动选择
+custom_proxy_group=💻 NetFlix|Disney`select`(新加坡|坡|狮城|SG|Singapore)`[]🚀 手动选择
+custom_proxy_group=📹 TikTok|PX`select`(日本|[^-]日|JP|Japan)`[]🚀 手动选择
 custom_proxy_group=🎯 Direct`select`[]DIRECT
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 AllNodes
-custom_proxy_group=🌍 AllNodes`select`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
-custom_proxy_group=🇸🇬 SG`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌍 AllNodes`select`(^(?!.*(港|HK|Hong Kong)).*)
+;custom_proxy_group=🌍 AllNodes`select`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
+;custom_proxy_group=🇸🇬 SG`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=🇯🇵 JP`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;^((?!港|HK|Hong Kong).)*$
