--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -18,12 +18,12 @@ localhost = 127.0.0.1
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
 #YouTube
-^https:\/\/duckduckgo.com\/\?q=ytb\+([^&]+).+ https://www.youtube.com/results?search_query=$1 302
+;^https:\/\/duckduckgo.com\/\?q=ytb\+([^&]+).+ https://www.youtube.com/results?search_query=$1 302
 
 [Script]
-YouTube去广告 = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
+;YouTube去广告 = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
 
 [MITM]
-enable = true
-hostname = www.google.cn, *.googlevideo.com
-ca-p12 =
+;enable = true
+;hostname = www.google.cn, *.googlevideo.com
+;ca-p12 =
