--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -17,13 +17,18 @@ localhost = 127.0.0.1
 
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
-#YouTube
-;^https:\/\/duckduckgo.com\/\?q=ytb\+([^&]+).+ https://www.youtube.com/results?search_query=$1 302
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break - reject
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
+
 
 [Script]
-;YouTube去广告 = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
+
 
 [MITM]
-;enable = true
-;hostname = www.google.cn, *.googlevideo.com
-;ca-p12 =
+enable = true
+hostname = www.google.cn, *.googlevideo.com,  -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com
+ca-p12 =
