--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -16,22 +16,20 @@ FINAL,PROXY
 localhost = 127.0.0.1
 
 [URL Rewrite]
-^http://(www.)?google.cn https://www.google.com 302
-(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break - reject
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
+^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
+;解锁tiktok
 (?<=_region=)CN(?=&) JP 307
 (?<=&mcc_mnc=)4 2 307
-^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) 13 302
-(^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) 118.03 302
+^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
+(^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
+;YouTube去广告
+ctier=L?ctier=A?302
+^https:\/\/[\s\S]*\.googlevideo\.com/.*&(oad|ctier)?_?REJECT
 
 [Script]
 
 
 [MITM]
 enable = true
-hostname = www.google.cn, *.googlevideo.com,  -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,  *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
-ca-p12 =
+hostname = *.byteoversea.com,*.tiktokv.com,*.tik-tokapi.com,*isnssdk.com*.googlevideo.com
+
