--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -5,9 +5,13 @@ dns-server = system, 119.29.29.29, 114.114.114.114, 223.5.5.5, 1.2.4.8
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, *.crashlytics.com, *.edu.cn, captive.apple.com
 
+[Proxy Group]
+SG = select,(新加坡|坡|狮城|SG|Singapore),interval=300,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+JP = select,(日本|[^-]日|JP|Japan),interval=300,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/NetFlix|Disney.list, PROXY
-RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/TikTok|PX.list, PROXY
+RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/NetFlix|Disney.list, SG
+RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/TikTok|PX.list, JP
 RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/Global.list, PROXY
 GEOIP,CN,DIRECT
 FINAL,PROXY
