--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -33,11 +33,23 @@ localhost = 127.0.0.1
 ^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
 ^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
+;upgrade 
+^https?:\/\/api\.ishansong\.com\/app\/check\/v\d+\/check - reject
+^https?:\/\/api\.m\.jd\.com\/openUpgrade - reject-dict
+^https?:\/\/apimobile\.meituan\.com\/appupdate\/mach\/checkUpdate? - reject
+^https?:\/\/apprn\.pizzahut\.com\.cn\/updateCheck\? - reject-dict
+^https?:\/\/capis(-?\w*)?\.didapinche\.com\/publish\/api\/upgrade - reject-dict
+^https?:\/\/ccsp-egmas\.sf-express\.com\/cx-app-base\/base\/app\/appVersion\/detectionUpgrade - reject-dict
+^https?:\/\/consumer\.fcbox\.com\/v1\/version\/getNewVersion - reject-dict
+^https?:\/\/fmapp\.chinafamilymart\.com\.cn\/api\/app\/biz\/base\/appversion\/latest - reject
+^https?:\/\/m\.client\.10010\.com\/mobileService\/(activity|customer)\/(accountListData|get_client_adv|get_startadv) - reject-dict
+^https?:\/\/sso\.lxjapp\.com\/\/chims\/servlet\/csGetLatestSoftwareVersionServlet - reject-dict
+^https?:\/\/www\.meituan\.com\/api\/v\d\/appstatus\? - reject
 
 [Script]
 
 
 [MITM]
 enable = true
-hostname = *.byteoversea.com,*.tiktokv.com,*.tik-tokapi.com,  -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com
+hostname = *.byteoversea.com,*.tiktokv.com,*.tik-tokapi.com,  -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com, %APPEND% api.ishansong.com,api.m.jd.com,apimobile.meituan.com,apprn.pizzahut.com.cn,capis*.didapinche.com,ccsp-egmas.sf-express.com,consumer.fcbox.com,fmapp.chinafamilymart.com.cn,m.client.10010.com,sso.lxjapp.com,www.meituan.com
 
