--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -7,7 +7,7 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 
 [Proxy Group]
 💻 NetFlix|Disney = select,url=http://www.gstatic.com/generate_204,interval=86400,timeout=5,select=0,policy-regex-filter=(新加坡|坡|狮城|SG|Singapore)
-📹 TikTok|PX = select,select,url=http://www.gstatic.com/generate_204,interval=86400,timeout=5,select=0,policy-regex-filter=(日本|[^-]日|JP|Japan)
+📹 TikTok|PX = select,url=http://www.gstatic.com/generate_204,interval=86400,timeout=5,select=0,policy-regex-filter=(日本|[^-]日|JP|Japan)
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/NetFlix|Disney.list, 💻 NetFlix|Disney
