--- a/config/QuantumultX/DuoDuo.conf
+++ b/config/QuantumultX/DuoDuo.conf
@@ -1,11 +1,11 @@
 ; 多多视频 永久VIP
 hostname = api.rr.tv
 ^https?:\/\/api\.rr\.tv\/.*?Version url reject
-https://api.rr.tv/v3plus/index/channel\?pageNum=1&position=CHANNEL_INDEX url script-response-body https://gjds.vip/QX/pojie/ddsp.js
-^https?:\/\/api\.rr\.tv\/app\/config\/h5NativeBar url script-response-body https://gjds.vip/QX/pojie/ddsp.js
-^https?:\/\/api\.rr\.tv\/v3plus\/index\/channel\?pageNum=1&position=CHANNEL_MY url script-response-body https://gjds.vip/QX/pojie/ddsp.js
-^https:\/\/api\.rr\.tv\/user\/privilege\/list url script-response-body https://gjds.vip/QX/pojie/ddsp.js
-^https:\/\/api\.rr\.tv\/ad\/getAll url script-response-body https://gjds.vip/QX/pojie/ddsp.js
-^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail url script-response-body https://gjds.vip/QX/pojie/ddsp.js
-https://api.rr.tv/watch/v4 url script-response-body https://gjds.vip/QX/pojie/ddsp.js
-https://api.rr.tv/user/profile url script-response-body https://gjds.vip/QX/pojie/ddsp.js
+https://api.rr.tv/v3plus/index/channel\?pageNum=1&position=CHANNEL_INDEX url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
+^https?:\/\/api\.rr\.tv\/app\/config\/h5NativeBar url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
+^https?:\/\/api\.rr\.tv\/v3plus\/index\/channel\?pageNum=1&position=CHANNEL_MY url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
+^https:\/\/api\.rr\.tv\/user\/privilege\/list url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
+^https:\/\/api\.rr\.tv\/ad\/getAll url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
+^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
+https://api.rr.tv/watch/v4 url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
+https://api.rr.tv/user/profile url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/DuoDuo.js
