--- a/config/QuantumultX/Rewrite/BaiduCloud.conf
+++ b/config/QuantumultX/Rewrite/BaiduCloud.conf
@@ -1,3 +1,6 @@
 #解锁百度会员   pan.baidu.com,
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 hostname= pan.baidu.com
+
+#百度网盘
+;https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://gjds.vip/QX/pojie/bdwp.js
