--- a/config/QuantumultX/Rewrite/KuWo.conf
+++ b/config/QuantumultX/Rewrite/KuWo.conf
@@ -1,8 +1,6 @@
-
-/*
-解锁酷我音乐VIP
-内部规则 请勿分享使用
-*/
+// @ScriptName        酷我音乐
+// @Function          听无损+下无损+听VIP书+换VIP肤+数字专辑
+// @Attention         下无损音乐技巧：选听无损，并等其缓存完
 hostname = *kuwo*,*lrts*
-^https?:\/\/.*(kuwo|lrts).*(music\.pay\?ne|\/a\.p|v\d\/api\/(user\/in|pay\/vi)|\w{3}\/v\d\/user\/vi|\w{3}\/spi\/ms|\w{3}\/v\d\/the|\w{3}\/enc\/use) url script-response-body https://gjds.vip/QX/kuwo/kw.js
-^https?:\/\/.*(kuwo|lrts).*(music\.pay\?ui) url script-request-header https://gjds.vip/QX/kuwo/kw.js
+^https?:\/\/.*(kuwo|lrts).*(music\.pay\?ne|\/a\.p|v\d\/api\/(user\/in|pay\/vi)|\w{3}\/v\d\/user\/vi|\w{3}\/spi\/ms|\w{3}\/v\d\/the|\w{3}\/enc\/use) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Script/kwyy.js
+^https?:\/\/.*(kuwo|lrts).*(music\.pay\?ui) url script-request-header https://github.com/ddgksf2013/Cuttlefish/raw/master/Script/kwyy.js
