--- a/config/QuantumultX/Rewrite/Others.conf
+++ b/config/QuantumultX/Rewrite/Others.conf
@@ -1,6 +1,6 @@
 #其它
 
-hostname= mp.weixin.qq.com, ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, *.tiktokv.com, *.byteoversea.com, *.tik-tokapi.com, weixin110.qq.com, security.wechat.com, 
+hostname= mp.weixin.qq.com, ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, *.tiktokv.com, *.byteoversea.com, *.tik-tokapi.com, weixin110.qq.com, security.wechat.com, *.baidu.com
 
 # 微信公众号阅读（全自动），阅读得积分，100积分换1元
 ^https?://mp\.weixin\.qq\.com/s\?.* url script-response-body https://raw.githubusercontent.com/WSL33099/QuantumultX/main/jiaoben/wechat_auto_read.js
@@ -17,6 +17,8 @@ hostname= mp.weixin.qq.com, ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com,
 
 #跳过中间界面，支付宝链接、被封禁链接进行通知弹窗跳转，在微信中用快照显示被封禁的链接（可选），在微信中进行强制重定向（可选），群聊 / 扫码均可使用，可选项可在脚本 2、3 行更改，也可在 BoxJs 中更改。
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/zZPiglet/Task/master/asset/UnblockURLinWeChat.js
-
 # 解除微信屏蔽（支持淘宝、天猫、支付宝等平台） / 无hostname
 ^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi url script-response-body https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/js/backup/weixin110.js
+
+# > 百度不跳转
+^https?:\/\/.*\.baidu\.com\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Purity/DisableBaiduJumpAction.js
