--- a/config/QuantumultX/Rewrite/UnlockVip.conf
+++ b/config/QuantumultX/Rewrite/UnlockVip.conf
@@ -1,6 +1,6 @@
 # QX解锁各类VIP
 
-hostname= m.iqiyi.com,z1.m1907.cn, m.youku.com, m.v.qq.com, m.bilibili.com, biz.caiyunapp.com, pan.baidu.com, account.wps.cn, shimo.im, buy.itunes.apple.com, *kuwo*,*lrts*, *.bili*.*,124.239.240.*,101.89.57.66,218.94.210.66,240e:b1:9801:206:11:0:0:*
+hostname= m.iqiyi.com,z1.m1907.cn, m.youku.com, m.v.qq.com, m.bilibili.com, biz.caiyunapp.com, pan.baidu.com, account.wps.cn, shimo.im, buy.itunes.apple.com, *kuwo*,*lrts*
 
 # 🔓影视VIP（网页端）
 # 爱奇艺
@@ -32,6 +32,3 @@ hostname= m.iqiyi.com,z1.m1907.cn, m.youku.com, m.v.qq.com, m.bilibili.com, biz.
 #🔓酷我音乐VIP
 ^https?:\/\/.*(kuwo|lrts).*(music\.pay\?ne|\/a\.p|v\d\/api\/(user\/in|pay\/vi)|\w{3}\/v\d\/user\/vi|\w{3}\/spi\/ms|\w{3}\/v\d\/the|\w{3}\/enc\/use) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Script/kwyy.js
 ^https?:\/\/.*(kuwo|lrts).*(music\.pay\?ui) url script-request-header https://github.com/ddgksf2013/Cuttlefish/raw/master/Script/kwyy.js
-
-#🔓哔哩哔哩VIP
-^https?:\/\/ap(i|p)\.bilibili\.com\/bilibili\.\w{3,4}\..+\/(View|PlayView|PlayConf|PlayerOnline|MainList|ViewProgress)$ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Script/BiLiBiLiBVIPCrack.js
