--- a/config/QuantumultX/Rewrite/Others.conf
+++ b/config/QuantumultX/Rewrite/Others.conf
@@ -20,5 +20,5 @@ hostname= mp.weixin.qq.com, ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com,
 # 解除微信屏蔽（支持淘宝、天猫、支付宝等平台） / 无hostname
 ^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi url script-response-body https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/js/backup/weixin110.js
 
-# > 百度不跳转 
+#百度不跳转 
 ^https?:\/\/.*\.baidu\.com\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Purity/DisableBaiduJumpAction.js
